--- a/pipeless_plant_bringup/package.xml
+++ b/pipeless_plant_bringup/package.xml
@@ -52,10 +52,14 @@
   <build_depend>ueye_cam</build_depend>
   <build_export_depend>ueye_cam</build_export_depend>
   <exec_depend>ueye_cam</exec_depend>
+  
   <build_depend>aruco_detect</build_depend>
   <build_export_depend>aruco_detect</build_export_depend>
   <exec_depend>aruco_detect</exec_depend>
 
+  <build_depend>robot_localization</build_depend>
+  <build_export_depend>robot_localization</build_export_depend>
+  <exec_depend>robot_localization</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
