--- a/pipeless_plant_bringup/CMakeLists.txt
+++ b/pipeless_plant_bringup/CMakeLists.txt
@@ -10,6 +10,7 @@ project(pipeless_plant_bringup)
 find_package(catkin REQUIRED COMPONENTS
   ueye_cam
   aruco_detect
+  fiducial_slam
   robot_localization
 )
 
@@ -105,7 +106,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES pipeless_plant_bringup
-  CATKIN_DEPENDS ueye_cam aruco_detect robot_localization
+  CATKIN_DEPENDS ueye_cam aruco_detect fiducial_slam robot_localization
 #  DEPENDS system_lib
 )
 
