--- a/pipeless_plant_bringup/package.xml
+++ b/pipeless_plant_bringup/package.xml
@@ -56,6 +56,10 @@
   <build_depend>aruco_detect</build_depend>
   <build_export_depend>aruco_detect</build_export_depend>
   <exec_depend>aruco_detect</exec_depend>
+  
+  <build_depend>fiducial_slam</build_depend>
+  <build_export_depend>fiducial_slam</build_export_depend>
+  <exec_depend>fiducial_slam</exec_depend>
 
   <build_depend>robot_localization</build_depend>
   <build_export_depend>robot_localization</build_export_depend>
