--- a/pipeless_plant_bringup/package.xml
+++ b/pipeless_plant_bringup/package.xml
@@ -53,17 +53,9 @@
   <build_export_depend>ueye_cam</build_export_depend>
   <exec_depend>ueye_cam</exec_depend>
   
-  <build_depend>aruco_detect</build_depend>
-  <build_export_depend>aruco_detect</build_export_depend>
-  <exec_depend>aruco_detect</exec_depend>
-  
-  <build_depend>fiducial_slam</build_depend>
-  <build_export_depend>fiducial_slam</build_export_depend>
-  <exec_depend>fiducial_slam</exec_depend>
-
-  <build_depend>robot_localization</build_depend>
-  <build_export_depend>robot_localization</build_export_depend>
-  <exec_depend>robot_localization</exec_depend>
+  <build_depend>ceiling_cam_fiducials_odom_ekf</build_depend>
+  <build_export_depend>ceiling_cam_fiducials_odom_ekf</build_export_depend>
+  <exec_depend>ceiling_cam_fiducials_odom_ekf</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
