added gui package, deleted old one

--- a/pipeless_plant_app/CMakeLists.txt
+++ b/pipeless_plant_app/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(pipeless_plant_rqt)
+project(pipeless_plant_app)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,9 +8,14 @@ project(pipeless_plant_rqt)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  cv_bridge
+  python_qt_binding
+  roslib
   rospy
-  rqt_gui
-  rqt_gui_py
+  sensor_msgs
+  std_msgs
+  std_srvs
+  tf
 )
 
 ## System dependencies are found with CMake's conventions
@@ -70,7 +75,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   sensor_msgs#   std_msgs
 # )
 
 ################################################
@@ -104,8 +109,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES pipeless_plant_rqt
-#  CATKIN_DEPENDS rospy rqt_gui rqt_gui_py
+#  LIBRARIES pipeless_plant_app
+#  CATKIN_DEPENDS cv_bridge python_qt_binding roslib rospy sensor_msgs std_msgs std_srvs tf
 #  DEPENDS system_lib
 )
 
@@ -122,7 +127,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/pipeless_plant_rqt.cpp
+#   src/${PROJECT_NAME}/pipeless_plant_app.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -133,7 +138,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/pipeless_plant_rqt_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/pipeless_plant_app_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -190,7 +195,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_pipeless_plant_rqt.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_pipeless_plant_app.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
