--- a/pipeless_plant_app/package.xml
+++ b/pipeless_plant_app/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pipeless_plant_rqt</name>
+  <name>pipeless_plant_app</name>
   <version>0.0.0</version>
-  <description>The pipeless_plant_rqt package</description>
+  <description>The pipeless_plant_app package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/pipeless_plant_rqt</url> -->
+  <!-- <url type="website">http://wiki.ros.org/pipeless_plant_app</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
@@ -49,20 +49,35 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>cv_bridge</build_depend>
+  <build_depend>python_qt_binding</build_depend>
+  <build_depend>roslib</build_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>rqt_gui</build_depend>
-  <build_depend>rqt_gui_py</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
+  <build_depend>tf</build_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
+  <build_export_depend>python_qt_binding</build_export_depend>
+  <build_export_depend>roslib</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>rqt_gui</build_export_depend>
-  <build_export_depend>rqt_gui_py</build_export_depend>
+  <build_export_depend>sensor_msgs</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>std_srvs</build_export_depend>
+  <build_export_depend>tf</build_export_depend>
+  <exec_depend>cv_bridge</exec_depend>
+  <exec_depend>python_qt_binding</exec_depend>
+  <exec_depend>roslib</exec_depend>
   <exec_depend>rospy</exec_depend>
-  <exec_depend>rqt_gui</exec_depend>
-  <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
+  <exec_depend>std_srvs</exec_depend>
+  <exec_depend>tf</exec_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-	<rqt_gui plugin="${prefix}/plugin.xml"/>
+
   </export>
 </package>
